add default keys